--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "terraforma",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Gulp based, client files transform processor following strict architecture and specifications.",
-  "main": "terraforma.js",
+  "main": "terraforma.min.js",
   "scripts": {
+    "postinstall": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -44,6 +45,7 @@
     "gulp-ssh": "^0.5.1",
     "gulp-uglify": "^1.2.0",
     "map-stream": "0.0.6",
+    "pita": "0.0.0",
     "serve-static": "^1.10.0",
     "yargs": "^3.15.0"
   }
