Added performance optimizations. Need testing.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "connect": "^3.4.0",
     "gulp": "^3.9.0",
+    "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.2.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
@@ -36,9 +37,11 @@
     "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.2.0",
+    "gulp-newer": "^0.5.1",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.0.1",
     "gulp-react": "^3.0.1",
+    "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "gulp-sourcemaps": "^1.5.2",
