--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "homepage": "https://github.com/volkovasystems/terraforma#readme",
   "dependencies": {
     "connect": "^3.4.0",
+    "del": "^2.0.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.2.1",
-    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-embedlr": "^0.5.2",
     "gulp-filter": "^2.0.2",
@@ -44,11 +44,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-ssh": "^0.5.1",
     "gulp-uglify": "^1.2.0",
     "map-stream": "0.0.6",
     "pita": "^0.2.0",
     "serve-static": "^1.10.0",
+    "vinyl-paths": "^2.0.0",
     "yargs": "^3.15.0"
   }
 }
