--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terraforma",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "Gulp based, client files transform processor following strict architecture and specifications.",
   "main": "terraforma.min.js",
   "scripts": {
@@ -46,9 +46,11 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "map-stream": "0.0.6",
-    "pita": "^0.2.0",
     "serve-static": "^1.10.0",
     "vinyl-paths": "^2.0.0",
     "yargs": "^3.15.0"
+  },
+  "devDependencies": {
+    "pita": "^0.2.1"
   }
 }
