--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "terraforma",
   "version": "0.2.9",
   "description": "Gulp based, client files transform processor following strict architecture and specifications.",
-  "main": "terraforma.min.js",
+  "main": "terraforma.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,30 +23,29 @@
   },
   "homepage": "https://github.com/volkovasystems/terraforma#readme",
   "dependencies": {
-    "connect": "^3.4.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "browser-sync": "^2.11.2",
     "del": "^2.0.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.2.1",
     "gulp-concat": "^2.6.0",
-    "gulp-embedlr": "^0.5.2",
-    "gulp-filter": "^2.0.2",
+    "gulp-cssnano": "^2.1.1",
     "gulp-flatten": "^0.1.0",
-    "gulp-insert": "^0.4.0",
     "gulp-less": "^3.0.3",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-newer": "^0.5.1",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.0.1",
     "gulp-react": "^3.0.1",
-    "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.3",
+    "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
+    "harden": "^0.2.0",
+    "lodash": "^4.6.1",
     "map-stream": "0.0.6",
-    "serve-static": "^1.10.0",
+    "parameta": "0.0.1",
     "vinyl-paths": "^2.0.0",
     "yargs": "^3.15.0"
   },
