--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "browser-sync": "^2.11.2",
+    "chalk": "^1.1.1",
     "del": "^2.0.0",
     "gulp": "^3.9.0",
+    "gulp-api-log": "^0.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.2.1",
@@ -37,7 +39,6 @@
     "gulp-less": "^3.0.3",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.0.1",
-    "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.5.2",
@@ -46,6 +47,7 @@
     "lodash": "^4.6.1",
     "map-stream": "0.0.6",
     "parameta": "0.0.1",
+    "raze": "0.0.0",
     "vinyl-paths": "^2.0.0",
     "yargs": "^3.15.0"
   },
